Make template useful for me

--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -20,6 +20,6 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-Put your acknowledgments here.
+I thank my beloved wife Chao.
 
 \endgroup
