--- a/ch/Chapter02.tex
+++ b/ch/Chapter02.tex
@@ -36,8 +36,8 @@ Acronym testing: \ac{UML} -- \acs{UML} -- \acf{UML} -- \acp{UML}
 
 
 \subsection{Test for a Subsection}
-\graffito{Note: The content of this chapter is just some dummy text.
-It is not a real language.}
+% \graffito{Note: The content of this chapter is just some dummy text.
+% It is not a real language.}
 Lorem ipsum at nusquam appellantur his, ut eos erant homero
 concludaturque. Albucius appellantur deterruisset id eam, vivendum
 partiendo dissentiet ei ius. Vis melius facilisis ea, sea id convenire
