--- a/ch/Chapter03.tex
+++ b/ch/Chapter03.tex
@@ -20,8 +20,8 @@ in their active layers.  The description of ionisation fluctuations is
 characterised by the significance parameter $\kappa$, which is
 proportional to the ratio of mean energy loss to the maximum allowed
 energy transfer in a single collision with an atomic electron:
-\graffito{You might get unexpected results using math in chapter or
-section heads. Consider the \texttt{pdfspacing} option.}
+% \graffito{You might get unexpected results using math in chapter or
+% section heads. Consider the \texttt{pdfspacing} option.}
 \begin{equation}
 \kappa =\frac{\xi}{E_{\textrm{max}}} %\mathbb{ZNR}
 \end{equation}
