--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,228 +1,463 @@
-% Encoding: windows-1252
-
-@Book{bentley:1999,
-  title     = {{P}rogramming {P}earls},
-  publisher = {Ad\-dison--Wesley},
-  year      = {1999},
-  author    = {Jon Bentley},
-  address   = {Boston, MA, USA},
-  edition   = {2},
+@inproceedings{blum2020recovering,
+  title={Recovering from Biased Data: Can Fairness Constraints Improve Accuracy?},
+  author={Blum, Avrim and Stangl, Kevin},
+  booktitle={1st Symposium on Foundations of Responsible Computing (FORC 2020)},
+  year={2020},
+  organization={Schloss Dagstuhl-Leibniz-Zentrum f{\"u}r Informatik}
 }
 
-@BOOK{bringhurst:2002,
-    title = {{T}he {E}lements of {T}ypographic {S}tyle},
-    publisher = {Hartley \& Marks Publishers},
-    year = {2013},
-    author = {Robert Bringhurst},
-    series = {Version 4.0: 20th Anniversary Edition},
-    address = {Point Roberts, WA, USA}
+@inproceedings{quadrianto2017recycling,
+  title={Recycling privileged learning and distribution matching for fairness},
+  author={Quadrianto, Novi and Sharmanska, Viktoriia},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={677--688},
+  year={2017}
 }
 
-@BOOK{cormen:2001,
-    title = {{I}ntroduction to {A}lgorithms},
-    publisher = {The MIT Press},
-    year = {2009},
-    author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L.
-    and Clifford Stein},
-    address = {Cambridge, MA, USA},
-    edition = 3
+@inproceedings{zafar2017fairnesstreatment,
+  title={Fairness beyond disparate treatment \& disparate impact: Learning classification without disparate mistreatment},
+  author={Zafar, Muhammad Bilal and Valera, Isabel and Gomez Rodriguez, Manuel and Gummadi, Krishna P},
+  booktitle={Proceedings of the 26th International Conference on World Wide Web},
+  pages={1171--1180},
+  year={2017},
+  organization={International World Wide Web Conferences Steering Committee}
 }
 
-@BOOK{dueck:trio,
-    title = {{D}ueck's {T}rilogie 2.1: {O}mnisophie -- {S}upramanie -- {T}opothesie},
-    publisher = {Springer},
-	address = {Berlin, Germany},
-    year = {2013},
-    author = {Gunter Dueck}
+@inproceedings{dwork2012fairness,
+  title={Fairness through awareness},
+  author={Dwork, Cynthia and Hardt, Moritz and Pitassi, Toniann and Reingold, Omer and Zemel, Richard},
+  booktitle={Proceedings of the 3rd innovations in theoretical computer science conference},
+  pages={214--226},
+  year={2012},
+  organization={ACM}
 }
 
-@ARTICLE{knuth:1976,
-    author = {Knuth, Donald E.},
-    title = {{B}ig {O}micron and {B}ig {O}mega and {B}ig {T}heta},
-    journal = {SIGACT News},
-    year = {1976},
-    volume = {8},
-    pages = {18--24},
-    number = {2},
-    address = {New York, NY, USA},
-    publisher = {ACM Press}
+@inproceedings{zafar2017fairnessconstraints,
+  title={Fairness Constraints: Mechanisms for Fair Classification},
+  author={Zafar, Muhammad Bilal and Valera, Isabel and Rogriguez, Manuel Gomez and Gummadi, Krishna P},
+  booktitle={Artificial Intelligence and Statistics},
+  pages={962--970},
+  year={2017}
 }
 
-@ARTICLE{knuth:1974,
-    author = {Knuth, Donald E.},
-    title = {{C}omputer {P}rogramming as an {A}rt},
-    journal = {Communications of the ACM},
-    year = {1974},
-    volume = {17},
-    pages = {667--673},
-    number = {12},
-    address = {New York, NY, USA},
-    publisher = {ACM Press}
+@inproceedings{hardt2016equality,
+  title={Equality of opportunity in supervised learning},
+  author={Hardt, Moritz and Price, Eric and Srebro, Nati and others},
+  booktitle={Advances in neural information processing systems},
+  pages={3315--3323},
+  year={2016}
 }
 
-@BOOK{sommerville:1992,
-    title = {{S}oftware {E}ngineering},
-    publisher = {Addison-Wesley},
-    year = {2015},
-    author = {Ian Sommerville},
-    address = {Boston, MA, USA},
-    edition = 10
+@article{friedler2018comparative,
+  title={A comparative study of fairness-enhancing interventions in machine learning},
+  author={Friedler, Sorelle A and Scheidegger, Carlos and Venkatasubramanian, Suresh and Choudhary, Sonam and Hamilton, Evan P and Roth, Derek},
+  journal={arXiv preprint arXiv:1802.04422},
+  year={2018}
 }
 
-@Book{taleb:2018,
-  title     = {Skin in the Game: Hidden Asymmetries in Daily Life},
-  publisher = {Random House},
-  year      = {2018},
-  author    = {Taleb, Nassim Nicholas},
-  address   = {New York, NY, USA},
+@article{chouldechova2017fair,
+  title={Fair prediction with disparate impact: A study of bias in recidivism prediction instruments},
+  author={Chouldechova, Alexandra},
+  journal={Big data},
+  volume={5},
+  number={2},
+  pages={153--163},
+  year={2017},
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
 }
 
-@Book{taleb:2010,
- title = {The Black Swan: The Impact of the Highly Improbable},
- publisher = {Random House},
- year = {2010},
- author = {Taleb, Nassim Nicholas},
- address = {New York, NY, USA}
- }
- 
-
-@BOOK{ferriss:2016,
-title={Tools of Titans: The Tactics, Routines, and Habits of Billionaires, Icons, and World-Class Performers},
-author={Timothy Ferriss},
-publisher={Houghton Mifflin Harcourt},
-year={2016},
-address = {Boston, MA, USA},
+@article{kleinberg2016inherent,
+  title={Inherent trade-offs in the fair determination of risk scores},
+  author={Kleinberg, Jon and Mullainathan, Sendhil and Raghavan, Manish},
+  journal={arXiv preprint arXiv:1609.05807},
+  year={2016}
 }
 
-@Book{adams:1996,
- author = {Adams, Scott},
- title = {The Dilbert Principle},
- publisher = {Harper Business},
- year = {1996},
- address = {New York, NY, USA}
- }
+@misc{Dua:2017 ,
+author = "Dheeru, Dua and Karra Taniskidou, Efi",
+year = "2017",
+title = "{UCI} Machine Learning Repository",
+url = "http://archive.ics.uci.edu/ml",
+institution = "University of California, Irvine, School of Information and Computer Sciences" }
 
-@Book{adams:2013,
- author = {Adams, Scott},
- title = {How to Fail at Almost Everything and Still Win Big: Kind of the Story of My Life},
- publisher = {Portfolio Penguin},
- year = {2013},
- address = {London, United Kingdom},
- }
-
-@Book{aurelius:2002,
- author = {Aurelius, Marcus},
- title = {Meditations (A New Translation)},
- publisher = {Modern Library},
- year = {2002},
- address = {New York, NY, USA},
- }
-
-@Book{cialdini:1984,
- author = {Cialdini, Robert B.},
- title = {Influence: The Psychology of Persuasion},
- publisher = {Harper Business},
- year = {1984},
- address = {New York, NY, USA}
- }
-
-@Book{feynman:1985,
-  title     = {{S}urely {Y}ou're {J}oking, {M}r. {F}eynman: {A}dventures of a {C}urious {C}haracter},
-  publisher = {W. W. Norton},
-  year      = {1985},
-  author    = {Feynman, Richard P.},
-  address   = {New York, NY, USA},
+@article{miao2010did,
+  title={Did the results of promotion exams have a disparate impact on minorities? {U}sing statistical evidence in Ricci v. DeStefano},
+  author={Miao, Weiwen},
+  journal={Journal of Statistics Education},
+  volume={18},
+  number={3},
+  year={2010},
+  publisher={Taylor \& Francis}
 }
 
-@Book{greenwald:2014,
-  title     = {{N}o {P}lace to {H}ide: {E}dward {S}nowden, the {NSA}, and the {S}urveillance {S}tate},
-  publisher = {Metropolitan Books},
-  year      = {2014},
-  author    = {Greenwald, Glenn},
-  address   = {New York, NY, USA},
+@inproceedings{kamiran2009classifying,
+  title={Classifying without discriminating},
+  author={Kamiran, Faisal and Calders, Toon},
+  booktitle={Computer, Control and Communication, 2009. IC4 2009. 2nd International Conference on},
+  pages={1--6},
+  year={2009},
+  organization={IEEE}
 }
 
-@Book{orwell:1949,
- author = {Orwell, George},
- title = {Nineteen Eighty-Four},
- publisher = {Secker \& Warburg},
- year = {1949},
- address = {London, United Kingdom}
- }
-
-@Book{pausch:2008,
-  title     = {The Last Lecture},
-  publisher = {Hodder \& Stoughton},
-  year      = {2008},
-  author    = {Pausch, Randy},
-  editor    = {Zaslow, Jeffrey},
-  address   = {London, United Kingdom},
+@article{angwin2016machine,
+  title={Machine bias},
+  author={Angwin, Julia and Larson, Jeff and Mattu, Surya and Kirchner, Lauren},
+  journal={ProPublica, May},
+  volume={23},
+  year={2016}
 }
 
-@Book{seneca,
- author = {Seneca, Lucius},
- title = {Letters from a Stoic: Epistulae Morales ad Lucilium},
- publisher = {Penguin},
- year = {1969},
- address = {Harmondsworth, United Kingdom}
- }
-
-@Book{trump:1987,
- author = {Trump, Donald J. and Schwartz, Tony},
- title = {Trump: The Art of the Deal},
- publisher = {Random House},
- year = {1987},
- address = {New York, NY, USA}
- }
-
- @Book{frankl:1959,
-  author = {Frankl, Viktor E.},
- title = {Man's Search for Meaning},
- publisher = {Beacon Press},
- year = {1959},
- address = {Boston, MA, USA}
-  }
-
-@Book{munger:2008,
-  title     = {Poor Charlie's Almanack: The Wit and Wisdom of Charles T. Munger},
-  publisher = {Donning Company},
-  year      = {2008},
-  author    = {Munger, Charles T.},
-  editor    = {Kaufman, Peter D.},
-  address   = {Virginia Beach, VA, USA},
-  edition   = {3},
-}
- 
- @Book{postman:2005,
- author = {Postman, Neil},
- title = {Amusing Ourselves to Death: Public Discourse in the Age of Show Business (20th Anniversary Edition)},
- publisher = {Penguin Books},
- year = {2005},
- address = {New York, NY, USA}
- }
-
-@Book{taleb:2012,
-  title     = {{A}ntifragile: {T}hings {T}hat {G}ain from {D}isorder},
-  publisher = {Random House},
-  year      = {2012},
-  author    = {Taleb, Nassim Nicholas},
-  address   = {New York, NY, USA},
+@inproceedings{zemel2013learning,
+  title={Learning fair representations},
+  author={Zemel, Rich and Wu, Yu and Swersky, Kevin and Pitassi, Toni and Dwork, Cynthia},
+  booktitle={International Conference on Machine Learning},
+  pages={325--333},
+  year={2013}
 }
 
-@Book{peterson:2018,
-  title     = {12 Rules for Life: An Antidote to Chaos},
-  publisher = {Random House Canada},
-  year      = {2018},
-  author    = {Peterson, Jordan B.},
-  address   = {Toronto, ON, Canada},
+@article{louizos2015variational,
+  title={The variational fair autoencoder},
+  author={Louizos, Christos and Swersky, Kevin and Li, Yujia and Welling, Max and Zemel, Richard},
+  journal={arXiv preprint arXiv:1511.00830},
+  year={2015}
 }
 
-@Book{harari:2014,
-  title     = {Sapiens: A Brief History of Humankind},
-  publisher = {Random House},
-  year      = {2014},
-  author    = {Harari, Yuval Noah},
-  address   = {New York, NY, USA},
+@inproceedings{feldman2015certifying,
+  title={Certifying and removing disparate impact},
+  author={Feldman, Michael and Friedler, Sorelle A and Moeller, John and Scheidegger, Carlos and Venkatasubramanian, Suresh},
+  booktitle={Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={259--268},
+  year={2015},
+  organization={ACM}
 }
 
-@Comment{jabref-meta: databaseType:bibtex;}
+@inproceedings{luong2011k,
+  title={k-NN as an implementation of situation testing for discrimination discovery and prevention},
+  author={Luong, Binh Thanh and Ruggieri, Salvatore and Turini, Franco},
+  booktitle={Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={502--510},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{joseph2016fairness,
+  title={Fairness in learning: Classic and contextual bandits},
+  author={Joseph, Matthew and Kearns, Michael and Morgenstern, Jamie H and Roth, Aaron},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={325--333},
+  year={2016}
+}
+
+@inproceedings{kamishima2011fairness,
+  title={Fairness-aware learning through regularization approach},
+  author={Kamishima, Toshihiro and Akaho, Shotaro and Sakuma, Jun},
+  booktitle={Data Mining Workshops (ICDMW), 2011 IEEE 11th International Conference on},
+  pages={643--650},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{kamishima2012fairness,
+  title={Fairness-aware classifier with prejudice remover regularizer},
+  author={Kamishima, Toshihiro and Akaho, Shotaro and Asoh, Hideki and Sakuma, Jun},
+  booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  pages={35--50},
+  year={2012},
+  organization={Springer}
+}
+
+@inproceedings{pedreshi2008discrimination,
+  title={Discrimination-aware data mining},
+  author={Pedreshi, Dino and Ruggieri, Salvatore and Turini, Franco},
+  booktitle={Proceedings of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={560--568},
+  year={2008},
+  organization={ACM}
+}
+
+@article{ruggieri2010data,
+  title={Data mining for discrimination discovery},
+  author={Ruggieri, Salvatore and Pedreschi, Dino and Turini, Franco},
+  journal={ACM Transactions on Knowledge Discovery from Data (TKDD)},
+  volume={4},
+  number={2},
+  pages={9},
+  year={2010},
+  publisher={ACM}
+}
+
+@inproceedings{calders2009building,
+  title={Building classifiers with independency constraints},
+  author={Calders, Toon and Kamiran, Faisal and Pechenizkiy, Mykola},
+  booktitle={Data mining workshops, 2009. ICDMW'09. IEEE international conference on},
+  pages={13--18},
+  year={2009},
+  organization={IEEE}
+}
+
+@article{lum2016statistical,
+  title={A statistical framework for fair predictive algorithms},
+  author={Lum, Kristian and Johndrow, James},
+  journal={arXiv preprint arXiv:1610.08077},
+  year={2016}
+}
+
+@inproceedings{BarCraShaWal17,
+  author    = {Solon Barocas and
+               Kate Crawford and
+               Aaron Shapiro and
+               Hanna Wallach},
+  title     = {The problem with bias: from allocative to representational harms in machine learning},
+  booktitle = {Special Interest Group for Computing, Information and Society (SIGCIS)},
+  year      = {2017}
+}
+
+@article{adler2018auditing,
+  title={Auditing black-box models for indirect influence},
+  author={Adler, Philip and Falk, Casey and Friedler, Sorelle A and Nix, Tionney and Rybeck, Gabriel and Scheidegger, Carlos and Smith, Brandon and Venkatasubramanian, Suresh},
+  journal={Knowledge and Information Systems},
+  volume={54},
+  number={1},
+  pages={95--122},
+  year={2018},
+  publisher={Springer}
+}
+
+@InProceedings{woodworth2017learning,
+  title =    {Learning Non-Discriminatory Predictors},
+  author =   {Blake Woodworth and Suriya Gunasekar and Mesrob I. Ohannessian and Nathan Srebro},
+  booktitle =    {Proceedings of the 2017 Conference on Learning Theory},
+  pages =    {1920--1953},
+  year =   {2017},
+  editor =   {Satyen Kale and Ohad Shamir},
+  volume =   {65},
+  address =    {Amsterdam, Netherlands},
+  month =    {7},
+  publisher =    {PMLR},
+}
+
+@InProceedings{GohCotGupFri16,
+title = {Satisfying Real-world Goals with Dataset Constraints},
+author = {Goh, Gabriel and Cotter, Andrew and Gupta, Maya and Friedlander, Michael P},
+booktitle = {Advances in Neural Information Processing Systems},
+editor = {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon and R. Garnett},
+pages = {2415--2423},
+year = {2016}
+}
+
+@article{madras2018learning,
+  author    = {David Madras and
+               Elliot Creager and
+               Toniann Pitassi and
+               Richard S. Zemel},
+  title     = {Learning Adversarially Fair and Transferable Representations},
+  journal   = {CoRR},
+  volume    = {abs/1802.06309},
+  year      = {2018}
+}
+
+@article{BarSel16,
+  author    = {Solon Barocas and Andrew D. Selbst},
+  title     = {Big Data's Disparate Impact},
+  journal   = {California Law Review},
+  volume    = {104},
+  pages     = {671--732},
+  year      = {2016}
+}
+
+@inproceedings{HerLiRowBuietal16,
+  author    = {Jos{\'{e}} Miguel Hern{\'{a}}ndez{-}Lobato and
+               Yingzhen Li and
+               Mark Rowland and
+               Thang D. Bui and
+               Daniel Hern{\'{a}}ndez{-}Lobato and
+               Richard E. Turner},
+  title     = {Black-Box Alpha Divergence Minimization},
+  booktitle = {International Conference on Machine Learning (ICML)},
+  pages     = {1511--1520},
+  year      = {2016}
+}
+
+@inproceedings{kingma2015adam,
+  title={Adam: A Method for Stochastic Optimization},
+  author={Diederik P. Kingma and Jimmy Ba},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2015},
+}
+
+@article{pearl2018theoretical,
+  title={Theoretical impediments to machine learning with seven sparks from the causal revolution},
+  author={Pearl, Judea},
+  journal={arXiv preprint arXiv:1801.04016},
+  year={2018}
+}
+
+@inproceedings{kusner2017counterfactual,
+  title={Counterfactual fairness},
+  author={Kusner, Matt J and Loftus, Joshua and Russell, Chris and Silva, Ricardo},
+  booktitle={Advances in Neural Information Processing Systems (NIPS)},
+  pages={4066--4076},
+  year={2017}
+}
+
+@inproceedings{williams1996gaussian,
+  title={Gaussian processes for regression},
+  author={Williams, Christopher KI and Rasmussen, Carl Edward},
+  booktitle={Advances in Neural Information Processing Systems (NIPS)},
+  pages={514--520},
+  year={1996}
+}
+
+@article{neal1997monte,
+  title={Monte Carlo implementation of Gaussian process models for Bayesian regression and classification},
+  author={Neal, Radford M},
+  journal={arXiv preprint physics/9701026},
+  year={1997}
+}
+
+@incollection{rasmussen2004gaussian,
+  title={Gaussian processes in machine learning},
+  author={Rasmussen, Carl Edward},
+  booktitle={Advanced lectures on machine learning},
+  pages={63--71},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{quinonero2005unifying,
+  title={A unifying view of sparse approximate Gaussian process regression},
+  author={Qui{\~n}onero-Candela, Joaquin and Rasmussen, Carl Edward},
+  journal={Journal of Machine Learning Research},
+  volume={6},
+  number={Dec},
+  pages={1939--1959},
+  year={2005}
+}
+
+@inproceedings{titsias2009variational,
+  title={Variational learning of inducing variables in sparse Gaussian processes},
+  author={Titsias, Michalis},
+  booktitle={Artificial Intelligence and Statistics (AISTATS)},
+  pages={567--574},
+  year={2009}
+}
+
+@article{williams1998bayesian,
+  title={Bayesian classification with Gaussian processes},
+  author={Williams, Christopher KI and Barber, David},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={20},
+  number={12},
+  pages={1342--1351},
+  year={1998},
+  publisher={IEEE}
+}
+
+@article{wachter2017counterfactual,
+  title={Counterfactual explanations without opening the black box: Automated decisions and the GDPR},
+  author={Wachter, Sandra and Mittelstadt, Brent and Russell, Chris},
+  journal={Harvard Journal of Law and Technology},
+  volume={31},
+  year={2018}
+}
+
+@phdthesis{minka2001family,
+  title={A family of algorithms for approximate Bayesian inference},
+  author={Minka, Thomas Peter},
+  year={2001},
+  school={Massachusetts Institute of Technology}
+}
+
+@article{calders2010three,
+  title={Three naive Bayes approaches for discrimination-free classification},
+  author={Calders, Toon and Verwer, Sicco},
+  journal={Data Mining and Knowledge Discovery},
+  volume={21},
+  number={2},
+  pages={277--292},
+  year={2010},
+  publisher={Springer}
+}
+
+@inproceedings{kilbertus2017avoiding,
+title = {Avoiding Discrimination through Causal Reasoning},
+author = {Kilbertus, Niki and Rojas Carulla, Mateo and Parascandolo, Giambattista and Hardt, Moritz and Janzing, Dominik and Sch\"{o}lkopf, Bernhard},
+booktitle = {Advances in Neural Information Processing Systems (NIPS)},
+pages = {656--666},
+year = {2017},
+}
+
+@inproceedings{kohavi1996scaling,
+  title={Scaling up the accuracy of Naive-Bayes classifiers: a Decision-Tree Hybrid},
+  author={Kohavi, Ron},
+  booktitle={Knowledge Discovery and Data Mining},
+  volume={96},
+  pages={202--207},
+  year={1996},
+}
+
+@inproceedings{dezfouli2015scalable,
+  author    = {Amir Dezfouli and Edwin V. Bonilla},
+  title     = {Scalable Inference for Gaussian Process Models with Black-Box Likelihoods},
+  booktitle = {Advances in Neural Information Processing Systems},
+  pages     = {1414--1422},
+  year      = {2015}
+}
+
+@inproceedings{edwards2015censoring,
+  title     = "Censoring Representations with an Adversary",
+  author    = "Harrison Edwards and Amos Storkey",
+  year      = "2016",
+  month     = "2",
+  booktitle = "International Conference in Learning Representations (ICLR2016)"
+}
+
+@article{zhang2018mitigating,
+  title={Mitigating unwanted biases with adversarial learning},
+  author={Zhang, Brian Hu and Lemoine, Blake and Mitchell, Margaret},
+  journal={arXiv preprint arXiv:1801.07593},
+  year={2018}
+}
+
+@article{beutel2017data,
+  title={Data decisions and theoretical implications when adversarially learning fair representations},
+  author={Beutel, Alex and Chen, Jilin and Zhao, Zhe and Chi, Ed H},
+  journal={arXiv preprint arXiv:1707.00075},
+  year={2017}
+}
+
+@inproceedings{calmon2017optimized,
+  title={Optimized pre-processing for discrimination prevention},
+  author={Calmon, Flavio and Wei, Dennis and Vinzamuri, Bhanukiran and Ramamurthy, Karthikeyan Natesan and Varshney, Kush R},
+  booktitle={Advances in Neural Information Processing Systems (NIPS)},
+  pages={3992--4001},
+  year={2017}
+}
+
+@article{bechavod2017penalizing,
+  title={Penalizing Unfairness in Binary Classification},
+  author={Bechavod, Yahav and Ligett, Katrina},
+  journal={arXiv preprint arXiv:1707.00044},
+  year={2017}
+}
+
+@article{dedeo2014wrong,
+  title={Wrong side of the tracks: Big Data and Protected Categories},
+  author={DeDeo, Simon},
+  journal={arXiv preprint arXiv:1412.4643},
+  year={2014}
+}
+
+@article{kilbertus2018blind,
+  title={Blind Justice: Fairness with Encrypted Sensitive Attributes},
+  author={Kilbertus, Niki and Gasc{\'o}n, Adri{\`a} and Kusner, Matt J and Veale, Michael and Gummadi, Krishna P and Weller, Adrian},
+  journal={arXiv preprint arXiv:1806.03281},
+  year={2018}
+}
+
+@article{everitt2017reinforcement,
+  title={Reinforcement learning with a corrupted reward channel},
+  author={Everitt, Tom and Krakovna, Victoria and Orseau, Laurent and Hutter, Marcus and Legg, Shane},
+  journal={arXiv preprint arXiv:1705.08417},
+  year={2017}
+}
