--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -18,50 +18,54 @@
 \clearpage
 % \pagestyle{empty} % Uncomment this line if your lists should not have any headlines with section name and page number
 \begingroup
-    \let\clearpage\relax
-    \let\cleardoublepage\relax
-    %*******************************************************
-    % List of Figures
-    %*******************************************************
-    %\phantomsection
-    %\addcontentsline{toc}{chapter}{\listfigurename}
-    \pdfbookmark[1]{\listfigurename}{lof}
-    \listoffigures
+  \let\clearpage\relax
+  \let\cleardoublepage\relax
+  %*******************************************************
+  % List of Figures
+  %*******************************************************
+  %\phantomsection
+  %\addcontentsline{toc}{chapter}{\listfigurename}
+  \pdfbookmark[1]{\listfigurename}{lof}
+  \listoffigures
 
-    \vspace{8ex}
+  \vspace{8ex}
 
-    %*******************************************************
-    % List of Tables
-    %*******************************************************
-    %\phantomsection
-    %\addcontentsline{toc}{chapter}{\listtablename}
-    \pdfbookmark[1]{\listtablename}{lot}
-    \listoftables
+  %*******************************************************
+  % List of Tables
+  %*******************************************************
+  %\phantomsection
+  %\addcontentsline{toc}{chapter}{\listtablename}
+  \pdfbookmark[1]{\listtablename}{lot}
+  \listoftables
 
-    \vspace{8ex}
-    % \newpage
+  \vspace{8ex}
+  % \newpage
 
-    %*******************************************************
-    % List of Listings
-    %*******************************************************
-    %\phantomsection
-    %\addcontentsline{toc}{chapter}{\lstlistlistingname}
-    \pdfbookmark[1]{\lstlistlistingname}{lol}
-    \lstlistoflistings
+  %*******************************************************
+  % List of Listings
+  %*******************************************************
+  %\phantomsection
+  %\addcontentsline{toc}{chapter}{\lstlistlistingname}
+  \pdfbookmark[1]{\lstlistlistingname}{lol}
+  \lstlistoflistings
 
-    \vspace{8ex}
+  \vspace{8ex}
 
-    %*******************************************************
-    % Acronyms
-    %*******************************************************
-    %\phantomsection
-    \pdfbookmark[1]{Acronyms}{acronyms}
-    \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
-    \chapter*{Acronyms}
-    \begin{acronym}[UMLX]
-        \acro{DRY}{Don't Repeat Yourself}
-        \acro{API}{Application Programming Interface}
-        \acro{UML}{Unified Modeling Language}
-    \end{acronym}
+  %*******************************************************
+  % Acronyms
+  %*******************************************************
+  %\phantomsection
+  \pdfbookmark[1]{Acronyms}{acronyms}
+  \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
+  \chapter*{Acronyms}
+  \begin{acronym}[UMLX]
+    \acro{DP}{Demographic Parity}
+    \acro{TPR}{True Positive Rate}
+    \acro{TNR}{True Negative Rate}
+    \acro{AR}{Acceptance Rate}
+    \acro{EOpp}{Equality of Opportunity}
+    \acro{EOdd}{Equalized Odds}
+    \acro{ML}{machine learning}
+  \end{acronym}
 
 \endgroup
