Write first two paragraphs

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -66,6 +66,7 @@
     \acro{EOpp}{Equality of Opportunity}
     \acro{EOdd}{Equalized Odds}
     \acro{ML}{machine learning}
+    \acro{ANNs}{artificial neural networks}
   \end{acronym}
 
 \endgroup
