--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -1,5 +1,14 @@
 \chapter{Introduction}\label{ch:introduction}
 \section{Problem statement}
-In order for the use of \ac{ML} systems to be acceptable in wider society,
-they have to be trustworthy.
-This means that
+In order for \ac{ML} systems to be used more widely,
+they have to become more trustworthy.
+The susceptibility of \ac{ANNs} to adversarial attacks has been well documented, but there are other problems as well.
+This includes their opaqueness and their general tendency to take shortcuts;
+leading to situations where \ac{ANNs} do not do `what we meant', but just what they were explicitly told to do.
+
+This problem becomes especially severe when the training data is biased in some way,
+which, by default, makes the \ac{ML} system copy the bias, or even exacerbate it.
+The topic of this thesis is how to deal with biased data;
+what types of bias exist and how to correct it if possible.
+
+\section{Motivation and aims}
