Some modest progress

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -461,3 +461,11 @@ year = {2017},
   journal={arXiv preprint arXiv:1705.08417},
   year={2017}
 }
+
+@inproceedings{liu2015faceattributes,
+ title = {Deep Learning Face Attributes in the Wild},
+ author = {Liu, Ziwei and Luo, Ping and Wang, Xiaogang and Tang, Xiaoou},
+ booktitle = {Proceedings of International Conference on Computer Vision (ICCV)},
+ month = {December},
+ year = {2015} 
+}
