--- a/main.tex
+++ b/main.tex
@@ -79,6 +79,7 @@ titlepage,numbers=noenddot,%1headlines,
 \newcommand{\Ie}{I.\,e.}
 \newcommand{\eg}{e.\,g.}
 \newcommand{\Eg}{E.\,g.}
+\newcommand{\thomas}[1]{\textcolor{red}{\textbf{Thomas:} #1}}
 % ****************************************************************************************************
 
 
