Some more progress
Now with nomenclature and glossary.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -469,3 +469,37 @@ year = {2017},
  month = {December},
  year = {2015} 
 }
+
+@article{kehrenberg2020tuning,
+  author={Kehrenberg, Thomas and Chen, Zexun and Quadrianto, Novi},
+  title={Tuning Fairness by Balancing Target Labels},
+  journal={Frontiers in Artificial Intelligence},
+  volume={3},
+  pages={33},
+  year={2020}
+}
+
+@inproceedings{kehrenberg2020nullsampling,
+  author    = {Kehrenberg, Thomas and 
+               Bartlett, Myles and 
+               Thomas, Oliver and 
+               Qua{\-}dri{\-}anto, Novi},
+  title     = {Null-sampling for Interpretable and Fair Representations},
+  year      = {2020},
+  isbn      = {9783030586041},
+  publisher = {Springer International Publishing},
+  url       = {https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123710562.pdf},
+  doi       = {10.1007/978-3-030-58604-1},
+  booktitle = {Computer Vision – ECCV 2020},
+  numpages  = {779},
+  location  = {Glasgow, UK}
+}
+
+@article{kehrenberg2020zeroshot,
+  author = {Kehrenberg, Thomas and Sharmanska, Viktoriia and Bartlett, Myles and Quadrianto, Novi},
+title={Zero-shot Fairness with Invisible Demographics},
+booktitle={Submitted to International Conference on Learning Representations},
+year={2021},
+url={https://openreview.net/forum?id=7IElVSrNm54},
+note={under review}
+}
