--- a/main.tex
+++ b/main.tex
@@ -147,7 +147,7 @@ titlepage,numbers=noenddot,%1headlines,
 \setlength{\glossarylabelindent}{10em}
 \newenvironment{glossaryenv}{%
 \newcommand\entry[2]{%
-\hangindent\glossarylabelindent\noindent\makebox[\glossarylabelindent][l]{##1\quad}\ignorespaces##2\par\addvspace{9pt}}%
+\hangindent\glossarylabelindent\noindent\makebox[\glossarylabelindent][l]{\bfseries ##1\quad}\ignorespaces##2\par\addvspace{9pt}}%
    \chapter*{Glossary}}{\par\addvspace{12pt}}
 % ****************************************************************************************************
 %\usepackage{pgfplots} % External TikZ/PGF support (thanks to Andreas Nautsch)
