Some of this was quite tough to write

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -72,7 +72,7 @@
     \acro{ANN}{artificial neural network}
     \acro{AR}{acceptance rate}
     \acro{DP}{demographic parity}
-    \acro{EOdd}{equalized odds}
+    \acro{EOdds}{equalized odds}
     \acro{EOpp}{equality of opportunity}
     \acro{ML}{machine learning}
     \acro{TNR}{true negative rate}
